--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId "com.design.studyonline"
+        applicationId "com.study.online"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
