--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
     compile 'com.android.support:support-v4:23.0.+'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.squareup.okio:okio:1.11.0'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
