--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".activity.LoginActivity"
             android:launchMode="singleTask"/>
+        <activity android:name=".activity.CommunicationDatialsActivity"/>
     </application>
 
 </manifest>
