--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.study.online"
         minSdkVersion 14
@@ -21,12 +21,12 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.0.+'
     compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.squareup.okio:okio:1.11.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
 }
